--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,8 @@ jobs:
             npm install
             npx playwright install
       - run:
-          name: Run Playwright tests
+          #name: Run Playwright tests
+          name: Run npm run test:api
           command: npm test -- --reporter=list
   deploy:
     # This is an example deploy job, not actually used by the workflow
