--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
             npx playwright install
       - run:
           #name: Run Playwright tests
-          name: Run npm run test:api
+          name: Run playwright test --config=playapi.config.ts --project=chromium
           command: npm test -- --reporter=list
   deploy:
     # This is an example deploy job, not actually used by the workflow
