command change in yml file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,8 @@ jobs:
             npm install
             npx playwright install
       - run:
-          #name: Run Playwright tests
-          name: Run playwright test --config=playapi.config.ts --project=chromium
-          command: npm test -- --reporter=list
+          name: Run Playwright tests
+          command: npm run test:api -- --reporter=list
   deploy:
     # This is an example deploy job, not actually used by the workflow
     docker:
