--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "playwright test",
-    "test:dev": "playwright test ./tips.spec.ts",
+    "test:dev": "playwright test ./e2e-interview8.spec.ts --headed",
     "test:api": "playwright test --config=playapi.config.ts --project=chromium",
     "test:pdf": "npx playwright pdf https://www.google.com ./pdf/google.pdf",
     "test:ui": "playwright test --ui",
@@ -21,7 +21,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "@playwright/test": "^1.52.0",
+    "@playwright/test": "^1.53.0",
     "@types/node": "^22.15.21",
     "prettier": "3.5.3"
   }
